# Tergine

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c  test.py  todo.txt
.github/workflows/: cmake-multi-platform.yml
include/: draw.h  setup.h  util.h
lib/: draw.c  setup.c  util.c
src/: draw.c
test/: main_test.c
